# bnet

./: .gitignore  README.md  pyproject.toml
bnet/: __init__.py  actor.py  env.py  learner.py  network.py  typing.py  util.py  utype.py
hbtfmt/: __init__.py  env.py  model.py  util.py
hbtfmt/figs/: fig_02.R  fig_03.R  plotutil.R  sup_hqnet_n.R  sup_hqnet_q.R  sup_other_vi.R  sup_sarsa.R  sup_td_n.R
hbtfmt/sims/: choice_other_vi.py  hqnet.py  noncontingent_other_vi.py  sarsa_choice.py  sarsa_noncontingent.py  sarsa_variable_interval.py  sarsa_variable_ratio.py  td_choice.py  td_noncontingent.py  td_variable_interval.py  td_variable_ratio.py  variable_interval_other_vi.py  variable_ratio_other_vi.py
hbtfmt/sims/config/: sim_01_hqnet.yaml  sim_02_choice.yaml  sim_02_noncontingent.yaml  sim_02_vi.yaml  sim_02_vr.yaml  sup_choice_other_vi.yaml  sup_hqnet_n.yaml  sup_hqnet_q.yaml  sup_noncontingent_other_vi.yaml  sup_sarsa_choice.yaml  sup_sarsa_noncontingent.yaml  sup_sarsa_vi.yaml  sup_sarsa_vr.yaml  sup_td_choice_n.yaml  sup_td_noncontingent_n.yaml  sup_td_vi_n.yaml  sup_td_vr_n.yaml  sup_vi_other_vi.yaml  sup_vr_other_vi.yaml
